# Phoenix

./: .gitignore  CMakeLists.txt  readme.md
include/objloader/: objloader.h
include/phoenix/cameras/: perspective.h
include/phoenix/core/: accel.h  bbox.h  bitmap.h  block.h  bsdf.h  camera.h  color.h  common.h  complexior.h  dpdf.h  emitter.h  envmap.h  film.h  filmtile.h  filter.h  frame.h  integrator.h  interaction.h  intersection.h  kdtree.h  material.h  mesh.h  microfacet.h  model.h  object.h  parser.h  parsertool.h  pembree.h  phoenix.h  photon.h  ppm.h  properlist.h  ray.h  renderer.h  rng.h  sampledata.h  sampler.h  sampling.h  scene.h  shape.h  (+4 more)
include/stb/: stb_image.h
include/tfm/: tinyformat.h
scene/cbox/: cbox-light.xml  cbox-naive.xml
scene/test/: test.xml
scene/test/meshes/: ball.mtl  test.mtl
src/bsdfs/: dielectric.cpp  diffuse.cpp  disney.cpp  microfacet.cpp  mirror.cpp  roughconductor.cpp  roughplastic.cpp  smoothconductor.cpp
src/cameras/: perspective.cpp
src/core/: bitmap.cpp  block.cpp  camera.cpp  color.cpp  envmap.cpp  film.cpp  model.cpp  object.cpp  parser.cpp  parsertool.cpp  pembree.cpp  photon.cpp  ppm.cpp  properlist.cpp  renderer.cpp  rng.cpp  scene.cpp  shape.cpp  transform.cpp
src/emitters/: area.cpp  environment.cpp  point.cpp
src/filters/: boxfilter.cpp
src/integrators/: albedo.cpp  ao.cpp  normal.cpp  pathems.cpp  pathmats.cpp  pathmats1.cpp  pathmis.cpp  photonmapper.cpp  photonmapper1.cpp  simple.cpp  testbsdf.cpp  testems.cpp  testlight.cpp  whitted.cpp
src/main/: phoenix.cpp
src/samplers/: independent.cpp
src/shapes/: obj.cpp  sphere.cpp
src/textures/: imagetexture.cpp
